<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="cn.edu.ouc.eng.soilcollection.samplingSettingsActivity">

    <LinearLayout
        android:id="@+id/groupPointSample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TableLayout
            android:id="@+id/point_setting_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TableRow
                android:id="@+id/row_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/record_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/record_number"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/del" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/txtPointSampleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:onClick="setTxtPointSampleDate"
                android:text="2017-06-05"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/txtPointSampleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:onClick="setTxtPointSampleTime"
                android:text="16:30"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupPerioSample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开始时间"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:gravity="center"
                android:paddingLeft="20dp"
                android:id="@+id/txtPerioSampleBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:onClick="setTxtPerioSampleBeginDate"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:gravity="center"
                android:id="@+id/txtPerioSampleBeginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:onClick="setTxtPerioSampleBeginTime"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="结束时间"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:paddingLeft="20dp"
                android:gravity="center"
                android:id="@+id/txtPerioSampleEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:onClick="setTxtPerioSampleEndDate"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:gravity="center"
                android:id="@+id/txtPerioSampleEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:onClick="setTxtPerioSampleEndTime"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="10dp"
                android:text="周期"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="分钟"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_margin="20dp"
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="modeSwitch"
        android:text="@string/point_sampling" />

</LinearLayout>
