<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    tools:context="cn.edu.ouc.eng.soilcollection.dataQueryActivity">

    <TableLayout
        android:layout_weight="1"
        android:id="@+id/collection_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow
            android:id="@+id/row_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
                <TextView
                    android:id="@+id/record_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/record_number"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/history_display_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/collect_timedate"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/waterContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/water_content"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/conductivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/conductivity"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@android:color/black"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/viewsQueryBegin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/txtBeginQueryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:onClick="setTxtBeginQueryDate"
            android:textColor="@android:color/black"
            android:textSize="@dimen/datetime_size" />

        <TextView
            android:id="@+id/txtBeginQueryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:onClick="setTxtBeginQueryTime"
            android:textColor="@android:color/black"
            android:textSize="@dimen/datetime_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewsQueryEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/txtEndQueryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:onClick="setTxtEndQueryDate"
            android:textColor="@android:color/black"
            android:textSize="@dimen/datetime_size" />

        <TextView
            android:id="@+id/txtEndQueryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:onClick="setTxtEndQueryTime"
            android:textColor="@android:color/black"
            android:textSize="@dimen/datetime_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupQueryButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnQueryData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="查询" />
        <Button
            android:id="@+id/btnSaveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="存储" />
    </LinearLayout>
</LinearLayout>
